# highvol-stock

./: .gitignore  README.md  docker-compose.yml
backend/fastapi_server/: Dockerfile  pyproject.toml
backend/fastapi_server/app/: main.py
backend/fastapi_server/app/models/: __init__.py  mongodb.py  stock.py
backend/fastapi_server/app/models/.cph/: .__init__.py_4824aad2f872d57793539fee361369d8.prob
backend/fastapi_server/app/routers/: stocks.py
crawler/: Dockerfile  pyproject.toml  stock_crawler.py
crawler/agents/: news_agent.py
db/: docker-compose.yml
demo/: main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.tsx
frontend/src/components/: ModeButton.tsx  ModeSelector.tsx  NoticeCard.tsx  Table.tsx  Texts.tsx  index.ts  textUtils.ts
frontend/src/contexts/: ResponsiveContext.tsx
frontend/src/data/: config.json  fetchStocks.ts  index.ts
frontend/src/hooks/: index.ts  useEventListener.ts  useWindowResize.ts
frontend/src/pages/: Main.tsx  WindowResizeTest.tsx
