[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["hobbang2 <cattie@pukyong.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
chromedriver-autoinstaller = "^0.6.2"
motor = "^3.3.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
