[tool.poetry]
name = "fastapi_server"
version = "0.1.0"
description = "fastapi backend server for practice"
authors = ["hobbang2 <cattie@pukyong.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
motor = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
